# simple-image-tool

./: .gitignore  README.md  pyproject.toml  simple-image.py
simple_image_tool/: __init__.py
simple_image_tool/template/: index.html
template/: index.html
