[tool.poetry]
name = "simple-image-tool"
version = "0.0.1"
description = "A simple command line tool to upload new image or view existing images on s3"
authors = ["Jiaming Shang <shangjiaming.yuan@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
Pillow = "^7.1.2"
boto3 = "^1.13.11"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
